k8s/network-policies/allow-portfolio-internal.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
  name: allow-portfolio-internal
  namespace: default
spec:
  egress:
  - to:
    - podSelector:
        matchLabels:
          portfolio: "true"
  - ports:
    - port: 53
      protocol: UDP
    to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          k8s-app: kube-dns
  ingress:
  - from:
    - podSelector:
        matchLabels:
          portfolio: "true"
  podSelector:
    matchLabels:
      portfolio: "true"
  policyTypes:
  - Ingress
  - Egress
